--- a/Oboulot/WebContent/css/sb-admin.css
+++ b/Oboulot/WebContent/css/sb-admin.css
@@ -65,7 +65,7 @@ body {
 .top-nav>.open>a,
 .top-nav>.open>a:hover,
 .top-nav>.open>a:focus {
-    color: #fff;
+    color: #9d9d9d;
     background-color: #000;
 }
 
@@ -117,7 +117,7 @@ ul.alert-dropdown {
         position: fixed;
         top: 51px;
         left: 225px;
-        width: 225px;
+        width: 350px;
         margin-left: -225px;
         border: none;
         border-radius: 0;
@@ -129,7 +129,7 @@ ul.alert-dropdown {
     }
 
     .side-nav>li>a {
-        width: 225px;
+        width: 350px;
     }
 
     .side-nav li a:hover,
@@ -147,7 +147,7 @@ ul.alert-dropdown {
     display: block;
     padding: 10px 15px 10px 38px;
     text-decoration: none;
-    color: #999;
+    color: #fff;
 }
 
 .side-nav>li>ul>li>a:hover {
